--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mdx-js/react": "^1.6.22",
     "@types/react": "^18.0.16",
     "@types/react-dom": "^18.0.6",
     "@types/styled-system": "^5.1.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "theme-ui": "^0.14.7"
   },
   "files": [
     "dist"
