--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "allowJs": true, // Allow JavaScript files to be compiled
     "allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export
-    "baseUrl": "packages",
+    "baseUrl": "components",
     "declaration": true, // Generate corresponding .d.ts file
     "esModuleInterop": true, // Disables namespace imports (import * as fs from "fs") and enables CJS/AMD/UMD style imports (import fs from "fs")
     "forceConsistentCasingInFileNames": true, // Disallow inconsistently-cased references to the same file.
@@ -23,6 +23,6 @@
     "strict": true, // Enable all strict type checking options
     "target": "es6" // Specify ECMAScript target version
   },
-  "include": ["packages/**/*.ts", "packages/**/*.tsx"],
+  "include": ["components/**/*.ts", "components/**/*.tsx"],
   "exclude": ["node_modules", "**/*.test.ts", "**/*.test.tsx"]
 }
