--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-library-esbuild",
-  "version": "3.3.0",
+  "version": "4.0.0",
   "description": "",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -16,7 +16,6 @@
     "prepublishOnly": "npm run build",
     "build-storybook": "build-storybook"
   },
-  "keywords": [],
   "author": "José Núñez",
   "license": "ISC",
   "devDependencies": {
@@ -31,22 +30,16 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.2.5",
     "esbuild": "^0.14.53",
-    "live-server": "^1.2.2",
     "rimraf": "^3.0.2",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mdx-js/react": "^1.6.22",
+    "typescript": "^4.7.4",
     "@types/react": "^18.0.16",
-    "@types/react-dom": "^18.0.6",
-    "@types/styled-system": "^5.1.15",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-system": "^5.1.5",
-    "theme-ui": "^0.14.7"
+    "@types/react-dom": "^18.0.6"
   },
+  "peerDependencies": {
+    "react": ">16.0.0",
+    "react-dom": ">16.0.0"
+  },
+  "dependencies": {},
   "files": [
     "dist"
   ]
