--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-library-esbuild",
-  "version": "4.0.0",
+  "version": "4.0.2",
   "description": "",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -19,21 +19,21 @@
   "author": "José Núñez",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack4": "^6.5.10",
-    "@storybook/manager-webpack4": "^6.5.10",
-    "@storybook/react": "^6.5.10",
-    "@storybook/testing-library": "^0.0.13",
-    "babel-loader": "^8.2.5",
-    "esbuild": "^0.14.53",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.7.4",
-    "@types/react": "^18.0.16",
-    "@types/react-dom": "^18.0.6"
+    "@babel/core": "7.18.10",
+    "@storybook/addon-actions": "6.5.10",
+    "@storybook/addon-essentials": "6.5.10",
+    "@storybook/addon-interactions": "6.5.10",
+    "@storybook/addon-links": "6.5.10",
+    "@storybook/builder-webpack4": "6.5.10",
+    "@storybook/manager-webpack4": "6.5.10",
+    "@storybook/react": "6.5.10",
+    "@storybook/testing-library": "0.0.13",
+    "babel-loader": "8.2.5",
+    "esbuild": "0.14.53",
+    "rimraf": "3.0.2",
+    "typescript": "4.7.4",
+    "@types/react": "18.0.16",
+    "@types/react-dom": "18.0.6"
   },
   "peerDependencies": {
     "react": ">16.0.0",
