--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-library-esbuild",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "description": "",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -28,18 +28,18 @@
     "@storybook/manager-webpack4": "6.5.10",
     "@storybook/react": "6.5.10",
     "@storybook/testing-library": "0.0.13",
+    "@types/react": "18.0.16",
+    "@types/react-dom": "18.0.6",
     "babel-loader": "8.2.5",
     "esbuild": "0.14.53",
     "rimraf": "3.0.2",
-    "typescript": "4.7.4",
-    "@types/react": "18.0.16",
-    "@types/react-dom": "18.0.6"
+    "twind": "0.16.17",
+    "typescript": "4.7.4"
   },
   "peerDependencies": {
     "react": ">16.0.0",
     "react-dom": ">16.0.0"
   },
-  "dependencies": {},
   "files": [
     "dist"
   ]
